implement get schedule by center
